feat(client): implement responsibility in login screen

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -3,12 +3,6 @@
     line-height: 1.5em;
 }
 
-.tamagotchi-screen {
-    background-color: var(--green-0);
-    max-width: 800px;
-    padding: 16px;
-}
-
 .w-full {
     width: 100%;
 }
@@ -29,9 +23,18 @@
     margin-top: 12px;
 }
 
+.mb-3 {
+    margin-bottom: 32px;
+}
 
 .margin-start-auto {
     margin-left: auto;
+}
+
+.tamagotchi-screen {
+    background-color: var(--green-0);
+    max-width: 800px;
+    padding: 16px;
 }
 
 .form-login {
@@ -47,15 +50,17 @@
     background-color: var(--green-0);
 }
 
-.form-internal {
-    display: flex;
-    justify-content: space-between;
-}
-
 button, .pixel-border {
     border-style: solid;
     border-width: 4px;
     border-color: var(--green-4);
     border-image-slice: 2;
     border-image-source: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='6'%3E%3Cpath d='M0 2h2v2H0zM2 0h2v2H2zM4 2h2v2H4zM2 4h2v2H2z' fill='%232D1B00' /%3E%3C/svg%3E");
+}
+
+@media (min-width: 748px) {
+    .form-internal {
+        display: flex;
+        justify-content: space-between;
+    }
 }
