--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -23,6 +23,10 @@
     margin-top: 12px;
 }
 
+.mb-2 {
+    margin-bottom: 12px;
+}
+
 .mb-3 {
     margin-bottom: 32px;
 }
@@ -63,4 +67,47 @@ button, .pixel-border {
         display: flex;
         justify-content: space-between;
     }
+}
+
+.image-fluid {
+    width: 100%;
+}
+
+.cat-box {
+    display: inline-block;
+    max-width: 400px;
+}
+
+.cat-container {
+    display: flex;
+    width: 800px;
+}
+
+.cat-actions {
+    display: inline-block;
+    width: 100%;
+    max-width: 480px;
+    margin-left: 32px;
+}
+
+.chat {
+    height: 280px;
+}
+
+.status {
+    display: flex;
+    justify-content: space-between;
+}
+
+.status-bar {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+.action-bar {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: -12px;
 }
