--- a/client/public/stylesheets/main.css
+++ b/client/public/stylesheets/main.css
@@ -70,6 +70,7 @@ button, .pixel-border {
     .form-internal {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 }
 
