--- a/client/public/stylesheets/main.css
+++ b/client/public/stylesheets/main.css
@@ -105,6 +105,7 @@ button, .pixel-border {
 }
 
 .status-bar {
+    position: relative;
     display: inline-block;
     width: 80px;
     height: 80px;
@@ -120,4 +121,24 @@ button, .pixel-border {
 .action-bar-login {
     display: flex;
     justify-content: flex-end;
+}
+
+.progress-bar {
+    position: absolute;
+    rotate: 270deg;
+    width: 100%;
+    height: 100%;
+    background: border-box;
+}
+
+.icon-progress-bar {
+    position: absolute;
+}
+
+progress::-webkit-progress-bar {
+    background-color: transparent;
+}
+
+progress::-webkit-progress-value {
+    background-color: var(--green-1);
 }
