style(client): improve chat message style

--- a/client/public/stylesheets/main.css
+++ b/client/public/stylesheets/main.css
@@ -149,4 +149,6 @@ progress::-webkit-progress-value {
 .chat-message {
     font-size: 0.8em;
     margin-top: 20px;
+    text-align: justify;
+    line-height: 1.8em;
 }
